<resources>
    <string name="app_name">Cat Ease</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Aplikasi Ramah Kucing</string>
    <string name="descTextView">Welcome to cat ease, your cat health app solution</string>
    <string name="title_welcome_page">Hello!</string>
    <string name="title_signup_page">Please complete the registration form below.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Fill out your information to get started.</string>
    <string name="title_login_page">Explore the cat world with us.</string>
    <string name="name">Name</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="title_article">Article</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>
    <string name="search">Search…</string>
    <string name="lihat">lihat semua</string>
    <string name="news">Breaking news</string>
    <string name="HomeText">A healthier cat, a happier you.</string>
    <string name="google_maps_key">AIzaSyDy2LQJJj204ShpcaKkhcbxXOz3OkjAqrQ</string>
    <string name="back">Back</string>
    <string name="orlogin">Or login with</string>
    <string name="predicted_label">Predicted: %1$s</string>
    <string name="no_result">No result</string>
    <string name="no_article_content">No article content</string>
    <string name="no_title">No title</string>
    <string name="read_more">Read More</string>
    <string name="recommendation">Medicine Recommendation</string>
    <string name="save">Save Result</string>
</resources>