<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <!-- ScrollView untuk memungkinkan scrolling pada konten -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollable_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Toolbar untuk judul -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintTop_toTopOf="parent">
                <!-- Isi Toolbar -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/toolbar_image"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/img_5"
                        android:contentDescription="@string/title_activity_main"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/navy" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <!-- Semua elemen UI lainnya seperti ProgressBar, TextView, CardView, dll. -->
            <!-- Pastikan semua elemen ini memiliki constraints yang benar untuk layout yang rapi -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <!-- Contoh TextView -->
            <TextView
                android:id="@+id/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HomeText"
                android:textSize="45sp"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textColor="@color/navy"
                android:fontFamily="sans-serif-smallcaps"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Text"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/white">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>
            <!-- Lanjutkan menambahkan elemen lain sesuai kebutuhan -->
            <TextView
                android:id="@+id/article_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_article"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/navy"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_check_all"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/button_check_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat"
                android:backgroundTint="@color/navy"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_articles"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/article_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:padding="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- BottomNavigationView tetap di luar ScrollView -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_bottom_navigation"
        android:foreground="@drawable/ripple_effect"
        android:backgroundTint="@color/white"
        app:itemIconTint="@color/bottom_nav_item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>